deploy/o11y/k8s/05_redis-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
  namespace: o11y
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
        - name: redis-exporter
          image: oliver006/redis_exporter:v1.89.0-alpine
          ports:
            - containerPort: 9121
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  namespace: o11y
spec:
  selector:
    app: redis-exporter
  ports:
    - port: 9121
      targetPort: 9121
