deploy/o11y/k8s/06_grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: o11y
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.tasklog-demo.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-grafana
                port:
                  number: 80
